@startuml
skinparam classAttributeIconSize 0
hide empty members

package "Protocols (ed_protocols.py)" {
  interface DatasourceProtocol
  interface CacheProtocol
  interface LoggingProtocol
  interface GisProtocol
  interface RouteServiceProtocol

  interface BfsProtocol
  interface BulkLoadProtocol
  interface InitDatasourceProtocol
  interface GetSystemInfoProtocol
  interface GetAllSystemNamesProtocol
  interface PathProtocol
  interface CalcSystemsDistanceProtocol
}

package "Core Services" {
  class EDRouteService
  class EDRouteServiceFactory

  class EDInitDatasourceService
  class EDGetSystemInfoService
  class EDGetAllSystemNamesService
  class EDCalcSystemsDistanceService
  class EDPathService
  class EDBulkLoadCacheService
}

package "Algorithms" {
  class EDBfsAlgo
  class EDBulkLoadAlgo
}

package "Data Backends / Cache / GIS" {
  class EDGisCache
  class EDTinyDB
  class EDRedis
  class EDGis

  class AIOTinyDB
  class SmartCacheTinyDB
}

package "App Layer" {
  class EDMain
  class EDDiscordBot
  class EDDatasourceFactory
}

package "Logging" {
  class EDLoggingUtils
  class _LoguruConfigWatcher
  class _ConfigFileEventHandler
}

' Implementations
EDRouteService ..|> RouteServiceProtocol
EDInitDatasourceService ..|> InitDatasourceProtocol
EDGetSystemInfoService ..|> GetSystemInfoProtocol
EDGetAllSystemNamesService ..|> GetAllSystemNamesProtocol
EDCalcSystemsDistanceService ..|> CalcSystemsDistanceProtocol
EDPathService ..|> PathProtocol
EDBulkLoadCacheService ..|> BulkLoadProtocol

EDBfsAlgo ..|> BfsProtocol
EDBulkLoadAlgo ..|> BulkLoadProtocol

EDTinyDB ..|> DatasourceProtocol
EDRedis ..|> DatasourceProtocol
EDGisCache ..|> CacheProtocol
EDGis ..|> GisProtocol
EDLoggingUtils ..|> LoggingProtocol

' Structural / composition relations
EDRouteService *-- DatasourceProtocol
EDRouteService *-- CacheProtocol
EDRouteService *-- LoggingProtocol
EDRouteService *-- InitDatasourceProtocol
EDRouteService *-- GetSystemInfoProtocol
EDRouteService *-- GetAllSystemNamesProtocol
EDRouteService *-- BulkLoadProtocol
EDRouteService *-- PathProtocol
EDRouteService *-- CalcSystemsDistanceProtocol
EDRouteService *-- BfsProtocol

EDRouteServiceFactory ..> EDDatasourceFactory : uses
EDRouteServiceFactory ..> EDGisCache : creates
EDRouteServiceFactory ..> EDGis : creates
EDRouteServiceFactory ..> EDInitDatasourceService : creates
EDRouteServiceFactory ..> EDGetSystemInfoService : creates
EDRouteServiceFactory ..> EDGetAllSystemNamesService : creates
EDRouteServiceFactory ..> EDCalcSystemsDistanceService : creates
EDRouteServiceFactory ..> EDBfsAlgo : creates
EDRouteServiceFactory ..> EDPathService : creates
EDRouteServiceFactory ..> EDBulkLoadAlgo : creates
EDRouteServiceFactory ..> EDRouteService : creates

EDMain *-- EDRouteService
EDMain *-- LoggingProtocol
EDMain ..> EDRouteServiceFactory : create()

EDDiscordBot *-- RouteServiceProtocol
EDDiscordBot *-- LoggingProtocol
EDDiscordBot ..> EDRouteServiceFactory : create()
EDDiscordBot ..> EDDatasourceFactory : create_datasource()
EDDiscordBot ..> EDGisCache : create()
EDDiscordBot ..> EDGis : create()

EDPathService *-- BfsProtocol
EDPathService *-- CalcSystemsDistanceProtocol
EDPathService *-- LoggingProtocol

EDCalcSystemsDistanceService *-- GetSystemInfoProtocol
EDCalcSystemsDistanceService *-- LoggingProtocol

EDGetSystemInfoService *-- CacheProtocol
EDGetSystemInfoService *-- LoggingProtocol

EDGetAllSystemNamesService *-- DatasourceProtocol
EDGetAllSystemNamesService *-- LoggingProtocol

EDInitDatasourceService *-- DatasourceProtocol
EDInitDatasourceService *-- LoggingProtocol

EDBulkLoadCacheService *-- BulkLoadProtocol
EDBulkLoadCacheService *-- LoggingProtocol

EDBfsAlgo *-- LoggingProtocol
EDBulkLoadAlgo *-- LoggingProtocol
EDBulkLoadAlgo *-- CacheProtocol

EDGisCache *-- DatasourceProtocol
EDGisCache *-- LoggingProtocol

EDTinyDB *-- LoggingProtocol
EDRedis *-- LoggingProtocol

AIOTinyDB ..> SmartCacheTinyDB

EDLoggingUtils ..> _LoguruConfigWatcher : initializes
_LoguruConfigWatcher ..> _ConfigFileEventHandler

@enduml
